--- a/aula2/aula2.csproj
+++ b/aula2/aula2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -6,10 +6,6 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\ProdutoController.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="entities\Poderes.cs" />
   </ItemGroup>
 
   <ItemGroup>
